# miscellaneous_scripts

./: Metropolis-Hastings.py  analysis.py  analyze_histo_1d.py  analyze_histo_2d.py  average.py  boltzmann_constant.py  calc_avg_se.py  circular_stat.py  colvars_traj_to_csv.py  compute_derivatives.py  compute_dihedrals.py  cubic_spline_pytorch.py  degFdegC.py  draw_fe_1D.py  draw_fe_1D_multi.py  draw_fes_1D.py  draw_fes_2D.py  draw_fes_2D_2.py  draw_fes_2D_3.py  draw_fes_2D_multi.py  draw_fes_2D_nanma.py  draw_fes_degree.R  fesrmsd.R  fesrmsd.py  fesrmsd_2.py  filter_minima.py  filter_traj.py  hillbert_curve_2d.py  hillbert_curve_3d.py  integrate1D.py  interactive.py  interp_path.py  join.py  join_2.py  mergepmf.py  metad_average.py  monitorCV.R  multi_linear_regression.py  parse_hist.py  pdb_to_gro.ipynb  (+25 more)
MFPT/: count_transitions.py
NAMD/: restart_helper.tcl
SMwST/: calc_z.py  collect-configuration-sequential.py  collect-configuration.py  collect-drifts.py  convert_to_pdb.tcl  create-output.py  draw_axis.tcl  extrapolate_path.py  images_distance.py  interpolate_path.py  join_drift_images.sh  overlay.sh  plot_path.tcl  rate_constant.py  render.sh  render.tcl  reparam.py  rmsd.py  show_metainfo.sh  zigzag_initial_path.ipynb
SMwST/CV-space/: swarms.namd
SMwST/randomization_with_scaling/: swarms.namd
SMwST/remove_loops/: CMakeLists.txt  Graph.cpp  Graph.h  Helper.cpp  Helper.h  Matrix.cpp  Matrix.h  Pathway.cpp  Pathway.h  Reparametrization.cpp  Reparametrization.h  SMwST_functions.cpp  Spline.cpp  Spline.h  main.cpp  swarms.namd
SMwST/remove_loops/example/: path_002.txt  path_copy_00_iter_003.txt  path_copy_01_iter_003.txt  path_copy_02_iter_003.txt  path_copy_03_iter_003.txt  path_copy_04_iter_003.txt  path_copy_05_iter_003.txt  path_copy_06_iter_003.txt  path_copy_07_iter_003.txt  path_copy_08_iter_003.txt  path_copy_09_iter_003.txt  path_copy_10_iter_003.txt  path_copy_11_iter_003.txt  path_copy_12_iter_003.txt  path_copy_13_iter_003.txt  path_copy_14_iter_003.txt  path_copy_15_iter_003.txt  path_copy_16_iter_003.txt  path_copy_17_iter_003.txt  path_copy_18_iter_003.txt  path_copy_19_iter_003.txt  test.tcl
SMwST/remove_loops/test_data/: path_299  path_new  path_new_2  test_tcl.tcl
SMwST/toc_figure/: gen_colors.py  plot_path_toc.tcl  render_toc.tcl
SMwST/trialanine/: average_path.py  cv_dihed.in  get_dihedrals.tcl
autoencoder/: EV_final.py  evaluate_model.py  filter_traj.py  show_weights.py
colvars_m4/: create_colvars_harmonic_restraint.m4  create_colvars_harmonic_restraint.sh  test.colvars.bak
committor/: committor_gpath_colvars.in  committor_gpath_namd.template  committor_stats.py  compress.sh  gen_committor_input.py  gpath_1.in  hist_committor.py  hist_initial_structures.py  path_output.txt  restrained_eq_gpath.namd  restraint_gpath.in  run_all.sh  string-15.coor  trialanine_apath.abf1.czar.pmf  trialanine_gpath.abf1.czar.pmf  trialanine_gpath_eq_b2.coor
committor/gpath_structures/: extract_pdb.tcl
dbaasp/: dbaasp_database_scraper.py  json_to_db.py  peptides_info_scraper.py
fit_plane/: CMakeLists.txt  fit_plane.cpp  fit_plane.h  main.cpp
julia/: filter_colvars_traj.jl  histogram.jl
shell_scripts/: join_multiple_images.sh
tcl_c/: build.sh  misc.cpp  misc.h  rmsd.cpp  rmsd.h
tica/: test_tica.py
vmd/: GromacsIndexToVMD.tcl  README.md  change_waterbox.tcl  delete_water.tcl  get_cell.tcl
walk_graph/: CMakeLists.txt  test.cpp
